--- a/Aiello Giuseppe.html
+++ b/Aiello Giuseppe.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!---favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/img">
+    <link rel="icon" type="image/x-icon" href="assets/css/img/ciccio.png">
     <!---icons-->
     <script src="https://kit.fontawesome.com/aec50919ea.js" crossorigin="anonymous"></script>
 </head>
@@ -63,7 +63,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="assets/img/ciccio.png" alt="profile">
+                <img src="assets/css/img/ciccio.png" alt="profile">
             </div>
             <div class="about-col-2">
                 <h1 id="title">About me.</h1>
