--- a/Aiello Giuseppe.html
+++ b/Aiello Giuseppe.html
@@ -74,8 +74,8 @@
                 </p>
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                    <p class="tab-links" onclick="opentab('experience')">Experience</p>
-                    <p class="tab-links" onclick="opentab('education')">Education</p>
+                    <p class="tab-links active-link" onclick="opentab('experience')">Experience</p>
+                    <p class="tab-links active-link" onclick="opentab('education')">Education</p>
                 </div>
                 <div class="tab-contents active-tab" id="skills">
                     <ul>
@@ -88,10 +88,10 @@
                         <li></li><i class="fa-brands fa-css3-alt icoskill"></i>CSS</li>
                     </ul>
                 </div>
-                <div class="tab-contents" id="experience">
+                <div class="tab-contents active-tab" id="experience">
                     
                 </div>
-                <div class="tab-contents" id="education">
+                <div class="tab-contents active-tab" id="education">
                     <ul>
                         <li><span>2022 - CURRENT</span><br>html  - Start2impact University</li>
                         <li><span>2013 - 2019</span><br>Liceo scientifico - Enrico Fermi</li>
