--- a/Aiello Giuseppe.html
+++ b/Aiello Giuseppe.html
@@ -73,11 +73,11 @@
                     I joined start2impact.
                 </p>
                 <div class="tab-titles">
-                    <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
+                    <p class="tab-links" onclick="opentab('skills')">Skills</p>
                     <p class="tab-links active-link" onclick="opentab('experience')">Experience</p>
-                    <p class="tab-links active-link" onclick="opentab('education')">Education</p>
+                    <p class="tab-links " onclick="opentab('education')">Education</p>
                 </div>
-                <div class="tab-contents active-tab" id="skills">
+                <div class="tab-contents" id="skills">
                     <ul>
                         <li></li><i class="fa-solid fa-pen-nib icoskill"></i>Brand Identity</li>
                         <li><i class="fa-solid fa-magnifying-glass icoskill"></i>User Research </li>
@@ -91,7 +91,7 @@
                 <div class="tab-contents active-tab" id="experience">
                     
                 </div>
-                <div class="tab-contents active-tab" id="education">
+                <div class="tab-contents" id="education">
                     <ul>
                         <li><span>2022 - CURRENT</span><br>html  - Start2impact University</li>
                         <li><span>2013 - 2019</span><br>Liceo scientifico - Enrico Fermi</li>
