--- a/Aiello Giuseppe.html
+++ b/Aiello Giuseppe.html
@@ -89,11 +89,12 @@
                 </div>
                 <div class="tab-contents active-tab" id="experience">
                 <li><span>Ott 2019 - Mar 2020</span><br>Imballatore presso Gucci </li>
-                <li><span>Set 2021 - Apr 2022</span><br>Postalettere presso Poste Italiane S.P.A</li>  
+                <li><span>Set 2021 - Apr 2022</span><br>Portalettere presso Poste Italiane S.P.A</li>  
                 </div>
                 <div class="tab-contents active-tab" id="education">
                     <ul>
                         <li><span>2022 - CURRENT</span><br>html  - Start2impact University</li>
+                        <li><span>2021 - 2022</span><br>Diploma servizi commerciali - I.P.S.C.E.O.A. Sede di Botricello </li>
                         <li><span>2013 - 2019</span><br>Liceo scientifico - Enrico Fermi</li>
                     </ul>
                 </div>
