--- a/Aiello Giuseppe.html
+++ b/Aiello Giuseppe.html
@@ -146,6 +146,7 @@
             </a>
             <div class="cv">
                 <button type="button"> <a href="assets/pdf/CV_Aiello_Giuseppe 0523 .pdf" download="CV_Aiello_Giuseppe 0523 .pdf">Download CV</a></button>
+                <button type="button"> <a href="assets/pdf/CV_Aiello_Giuseppe 0523 .pdf" view="CV_Aiello_Giuseppe 0523 .pdf">View CV</a></button>
             </div>
         </div>
         
