--- a/Aiello Giuseppe.html
+++ b/Aiello Giuseppe.html
@@ -110,16 +110,13 @@
         <div class="portfolio-text">
             <h1 class="title">Portfolio</h1>
             <p>Here you can find all my project. More coming soon!</p>
+        <p>New projects will be published soon!</p>
+        <h1 class="project">COMING SOON!</h1>
         </div>
-
-        <div class="portfolio-content">
-          <h2>New Project</h2>
-                <p>Work in progress</p>
-            </div>
-
-        </div>
+     </div>
     </div>
 </div>
+
 
 
 
